@@ -5,6 +5,8 @@ mountall (2.4~) UNRELEASED; urgency=low
       find_mount() and segfault.  LP: #503212.
   * src/mountall.c: Handle TAG_UNKNOWN.  LP: #505907.
   * src/mountall.c: Ensure boredom_timer is set to NULL when freeing
+  * src/mountall.c: Default to no action for boredom query if prompt fails.
+    LP: #505530.
 
  -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Sat, 09 Jan 2010 05:48:25 +0200
 
